# aif-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  api.py  document.md  main.py  nse_pipeline.py  render.yaml  requirements.txt  scheduler.py
.github/workflows/: ci.yml  cron-scraper.yml  scrapers.yml
backend/: cli.py  main.py  pyproject.toml  requirements.txt
backend/app/api/: api.py  triggers.py
backend/app/core/: config.py  fund_registry.py  http_client.py  logger.py
backend/app/db/: connection.py  models.py  operations.py
backend/app/engine/: fuzzy_matcher.py  normalizer.py  portfolio_reconstructor.py
backend/app/scrapers/: baseline_aggregator.py  market_data.py  nse_pipeline.py  security_master.py
config/: __init__.py  fund_registry.py  settings.py
data/: aif_scrapper.db
data/downloads/: Disclosure_of_commission_paid_to_Distributor_FY_24-25.xlsx
database/: connection.py  models.py  operations.py
engine/: fuzzy_matcher.py  normalizer.py  portfolio_reconstructor.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
scrapers/: baseline_aggregator.py  security_master.py
utils/: http_client.py  logger.py
